--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Riverway"
 description: ""
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: ""
+baseurl: "/jekyll-theme-memoirs"
 url: "https://doha-kim.github.io"
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
