--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ paginate: 6
 paginate_path: /page:num/
     
 # Other
+highlighter: none
 markdown: kramdown
 kramdown:
    syntax_highlighter_opts:
